<?xml version="1.0" encoding="utf-8"?>
<searchable xmlns:android="http://schemas.android.com/apk/res/android"
    android:label="@string/app_name"
    android:hint="Search alarms"
    android:includeInGlobalSearch="true"
    android:searchSettingsDescription="@string/search_description">
    
    <!-- Search keywords for app discovery -->
    <actionkey
        android:keycode="KEYCODE_UNKNOWN"
        android:queryActionMsg="@string/search_keyword_alarm"
        android:suggestActionMsg="@string/search_keyword_chrona" />
        
    <actionkey
        android:keycode="KEYCODE_UNKNOWN"
        android:queryActionMsg="@string/search_keyword_clock"
        android:suggestActionMsg="@string/search_keyword_timer" />
        
    <actionkey
        android:keycode="KEYCODE_UNKNOWN"
        android:queryActionMsg="@string/search_keyword_reminder"
        android:suggestActionMsg="@string/app_name" />
</searchable>